# omniroute-tray

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/: cask.rb.tmpl  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
Casks/: omniroute-tray.rb
scripts/: fetch-node.sh
src/: icons.js  main.js  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: analytics.rs  apikey.rs  data.rs  doctor.rs  engine_gate.rs  github.rs  health.rs  installer.rs  lib.rs  lockfile.rs  logfile.rs  main.rs  paths.rs  ratelimits.rs  registry.rs  runtime.rs  state.rs  supervisor.rs  updater.rs
