[package]
name = "omniroute-tray"
version = "0.1.2"
description = "A cross-platform tray app that supervises, monitors, and auto-updates the OmniRoute AI router."
authors = ["OmniRouteTray contributors"]
license = "MIT"
repository = "https://github.com/zoispag/omniroute-tray"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "omniroute_tray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
thiserror = "2"
semver = "1"
ureq = { version = "2", features = ["json"] }
keyring = { version = "3", features = ["apple-native"] }
rusqlite = { version = "0.40", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
